# seamless_cloning

./: CMakeLists.txt  README.md  cloning.cpp  cloning.h  homography.cpp  homography.h  interactive.cpp  interactive.h  main.cpp  path.cpp  path.h  quadrilateral.cpp  quadrilateral.h  seamless_cloning.cpp  seamless_cloning.h  utils.cpp  utils.h
